# dama-mob

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  an1_app.py  cloudbuild.yaml  corpus-fs-serve.ts  cors.json  eslint.config.js  package-lock.json  package.json  playwright.config.ts  pyproject.toml  pytest.ini  requirements.txt  vite-plugin-dama-corpus-fs.ts  vite.config.ts
Desktop/dama dev/: .env.example  .gitignore  README.md  package-lock.json  package.json  pyproject.toml  vite.config.ts
Desktop/dama dev/config/vite/: corpus-fs-serve.ts  vite-plugin-dama-corpus-fs.ts  vite-plugin-openai-reflection.ts
Desktop/dama dev/docs/: AI_GENERATION.md  APP_SURFACE.md  ARCHITECTURE.md  ARTIFACTS.md  CONFIG_ENV.md  DASHBOARD.md  DEPLOYMENT.md  DOC_INDEX.md  EVENT_CATALOG.md  GATEWAY.md  GCS_HDB.md  IMAGE_PIPELINE.md  LOCAL_RDB_SCHEMA.md  MIGRATION_NOTES.md  README.md  REPLAY_REBUILD.md  RUNBOOK.md  SCALE_MONITORING.md  SECURITY_PRIVACY.md  SOURCE_REGISTRY.md  SUBSCRIBERS.md  SUPERVISOR.md  TESTING_QUALITY.md
Desktop/dama dev/docs/chats/: cursor_json_structure_for_dn.md  cursor_new_repository_introduction.md  cursor_splitting_jsons_into_suttas.md  cursor_tracking_nikaya_sutta_audio_prog.md
Desktop/dama dev/docs/sql/: harness-schema.sql
Desktop/dama dev/scripts/pipeline/: 00_normalize.py  01_download.py  02_download_samples.py  03_identify.py  04_segment_split.py  05_segment_commentary.py  06_segment_collect.py  07_segment_bounds.py  08_link_audio.py  (+13 more)
Desktop/dama dev/src/: entry-client.tsx  entry-server.tsx  routeTree.gen.ts  router.tsx  styles.css
(+531 files in other folders)
