[project]
name = "mob-app-pipeline"
version = "0.1.0"
description = "Local corpus pipeline tooling for mob app"
requires-python = ">=3.11"
dependencies = [
  "pytest",
  "yt-dlp",
  "google-cloud-storage",
]

[project.optional-dependencies]
translate-ja = [
  "sentencepiece",
  "torch",
  "transformers",
]
