[project]
name = "mob-app-pipeline"
version = "0.1.0"
description = "Local corpus pipeline tooling for mob app"
requires-python = ">=3.11"
dependencies = [
  "numpy",
  "opencv-python-headless",
  "pillow",
  "pytest",
  "PyMuPDF",
  "rapidocr-onnxruntime",
  "yt-dlp",
  "google-cloud-storage",
  "openai>=2.33.0",
  "python-dotenv>=1.2.2",
]

[project.optional-dependencies]
translate-ja = [
  "sentencepiece",
  "torch",
  "transformers",
]
