[project]
name = "dama-dev-pipeline"
version = "0.1.0"
description = "Local corpus pipeline and manga panel tooling"
requires-python = ">=3.11"
dependencies = [
  "numpy",
  "opencv-python-headless",
  "pillow",
  "pytest",
  "PyMuPDF",
  "rapidocr-onnxruntime",
  "yt-dlp",
  "google-cloud-storage",
  "openai>=2.33.0",
  "python-dotenv>=1.2.2",
  "psutil>=7.2.2",
]

[project.optional-dependencies]
translate-ja = [
  "sentencepiece",
  "torch",
  "transformers",
]
